@@ -30,7 +30,10 @@ resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Tags-HTML-Logi
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Tags-HTML-Login-Request';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Tags-HTML-Login-Request';
 test_requires 'CSS::Struct::Output::Structure' => 0;
+test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0;
 test_requires 'Tags::Output::Structure' => 0;
+test_requires 'Test::MockObject' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
